Fixed footer overflow

--- a/assets/themes/bootstrap/css/me.css
+++ b/assets/themes/bootstrap/css/me.css
@@ -9,7 +9,7 @@
 }
 
 .myfooter {
-  padding: 1rem 1rem;
+  padding: 0.5rem 0.5rem;
   background: linear-gradient(#ffffff, #f2f2f2);
   color: #777777;
   font-size: 0.85em;
